[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ledgermem-crewai"
version = "0.1.0"
description = "CrewAI long-term memory provider backed by LedgerMem."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "LedgerMem", email = "founders@proofly.dev" }]
keywords = ["ledgermem", "crewai", "memory", "agents", "llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "ledgermem>=0.1",
  "crewai>=0.80",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/ledgermem/ledgermem-crewai"
Issues = "https://github.com/ledgermem/ledgermem-crewai/issues"
Source = "https://github.com/ledgermem/ledgermem-crewai"

[tool.hatch.build.targets.wheel]
packages = ["src/ledgermem_crewai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
