[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "getmnemo-crewai"
version = "0.1.0"
description = "CrewAI long-term memory provider backed by Mnemo."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Mnemo", email = "founders@getmnemo.xyz" }]
keywords = ["getmnemo", "crewai", "memory", "agents", "llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "getmnemo>=0.1",
  "crewai>=0.80",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/getmnemo/getmnemo-crewai"
Issues = "https://github.com/getmnemo/getmnemo-crewai/issues"
Source = "https://github.com/getmnemo/getmnemo-crewai"

[tool.hatch.build.targets.wheel]
packages = ["src/getmnemo_crewai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
